--- a/_posts/2012-10-20-PhotographyTipsForBeginners01.textile
+++ b/_posts/2012-10-20-PhotographyTipsForBeginners01.textile
@@ -1,9 +1,9 @@
 ---
 layout: quote
-title: Photography Tips For Beginners
+title: 摄影入门之器材（一）
 category: photography
 ---
-本文来源于新浪微博 @创意的尾巴，转载请注明出处:
+本文引自新浪博客 @创意的尾巴，转载请注明出处:
 http://www.iznd.com/photography/2012/10/20/PhotographyTipsForBeginners01.html
 
 
@@ -83,8 +83,6 @@ http://www.iznd.com/photography/2012/10/20/PhotographyTipsForBeginners01.html
 再次，在一些配件和附件上，尼康镜头遮光罩是标配的，热靴盖标配，包括LCD屏的保护盖（D90以上的机子就有）。虽然说这几个附件增加
 
 不了啥成本，但也能反应厂家对消费者的重视。
-
-
 
 【3】二手还是新机？
 
